# Living-Sustainability

./: .gitignore  LICENSE  README.md
back_end/: README.md  fly.toml  package-lock.json  package.json  server.js
back_end/public/: air-map.js  ground-map.html  ground-map.js  index.js  utils.js
back_end/public/data/: ground-map-data.json
back_end/public/prompt/: archive.txt  chatgpt_prompt.txt  chatgpt_prompt_v2.txt  chatgpt_prompt_v3.txt  v3_old.txt
back_end/tests/: evaluate-text-test-sample.js  freight-test-sample.js  server.test.js
back_end/utils/: analysis.js  openai-api.js
back_end/views/: index.ejs
back_end_js/: README.md  fly.toml  server.js
back_end_js/public/: air-map.html  index.css  map.css
back_end_js/public/data/: air-map-data.json  archive.json
back_end_js/public/prompt/: current_prompt.txt  extract_LCA_sources_prompt_v5.txt
back_end_js/tests/: phone-test-sample.js
back_end_js/utils/: analysis.js  database.js  openai-api.js  phone.js  search.js
back_end_py/: Dockerfile  README.md  app.py  fly.toml  pyproject.toml  requirements.txt
front_end/: README.md  package-lock.json  package.json
front_end/assets/: content-style.css  popup-content.css
front_end/release/: manifest.json  material-utils.js  popup-content.js
front_end/release/assets/: popup.css
front_end/src/: content.js  manifest.json  material-utils.js  popup-content.js  popup.html  popup.js
front_end/src/highlight/: highlight-tracker.js  highlight-ui.js  highlight-utils.js
front_end/src/utils/: math-utils.js  ui-utils.js  utils.js
(+11 files in other folders)
